[package]
name = "rsb-downloader"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
tokio = { version = "1.47.1", features = ["full"] , optional = true}

[[example]]
name = "sync"


[features]
# Default feature

sync = ["reqwest/blocking"]

async = ["reqwest", "tokio"]
